Alignment issue on summaries (#2554)

--- a/src/components/summary/_summary.scss
+++ b/src/components/summary/_summary.scss
@@ -178,7 +178,7 @@ $hub-row-spacing: 1.3rem;
     &__item-title,
     &__values,
     &__actions {
-      flex: 4;
+      flex: 5 1 33%;
       padding-top: $summary-row-spacing;
       vertical-align: top;
 
@@ -196,13 +196,8 @@ $hub-row-spacing: 1.3rem;
       align-self: flex-start;
     }
 
-    &__item-title,
-    &__values {
-      flex: 7.3;
-    }
-
-    &__item-title--2 {
-      flex: 4.5;
+    &__values--2 {
+      flex: 10.5 1 66%;
     }
 
     &--hub & {
@@ -210,10 +205,6 @@ $hub-row-spacing: 1.3rem;
       &__values,
       &__actions {
         padding-top: $hub-row-spacing;
-      }
-
-      &__actions {
-        flex: 6;
       }
     }
   }
